--- a/Contact-Application/src/app/components/contact-card/contact-card.component.css
+++ b/Contact-Application/src/app/components/contact-card/contact-card.component.css
@@ -65,6 +65,7 @@
   object-fit: cover;
   border-radius: 50%;
   margin-bottom: 10px;
+  border: 2px solid #00796b;
 }
 
 /* Hovered details section */
@@ -83,12 +84,11 @@
   flex-direction: column;
   align-items: flex-start;
 }
-
 .details img {
-  width: 100%;
-  max-width: 150px;
-  height: auto;
-  margin-bottom: 10px;
-  border-radius: 8px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  border: 2px solid #00796b;
 }
