--- a/Contact-Application/src/app/components/contact-card/contact-card.component.html
+++ b/Contact-Application/src/app/components/contact-card/contact-card.component.html
@@ -1,7 +1,7 @@
 <div class="card" (mouseenter)="hover = true" (mouseleave)="hover = false">
   <h3>{{ contact.name }}</h3>
 
-  <!-- Show details when hovered -->
+  <!-- Show details when hovered 
   <div class="details" *ngIf="hover">
     <img *ngIf="contact.profilePic" [src]="'http://localhost:3000' + contact.profilePic" alt="Profile" class="profile-pic" />
     <p><strong>Email:</strong> {{ contact.email }}</p>
@@ -12,7 +12,7 @@
     <p><strong>Purpose of Visit:</strong> {{ contact.purposeOfVisit }}</p>
     <p><strong>ID No:</strong> {{ contact.identificationNumber }}</p>
   </div>
-
+-->
   <div class="actions">
     <button [routerLink]="['/edit', contact._id]">Edit</button>
     <button (click)="delete.emit(contact._id!)">Delete</button>
