--- a/Contact-Application/src/app/components/search-bar/search-bar.component.css
+++ b/Contact-Application/src/app/components/search-bar/search-bar.component.css
@@ -2,7 +2,7 @@ form {
     max-width: 500px;
     margin: 30px auto;
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #1b1a1a;
     border-radius: 12px;
     background-color: #f9f9f9;
   }
