--- a/Contact-Application/src/app/components/add-contact/add-contact.component.css
+++ b/Contact-Application/src/app/components/add-contact/add-contact.component.css
@@ -1,10 +1,10 @@
 form {
-    max-width: 500px;
+    max-width: 600px;
     margin: 30px auto;
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #1b1b1b;
     border-radius: 12px;
-    background-color: #f9f9f9;
+    background-color: #e0fadc;
   }
   
   form div {
@@ -18,7 +18,7 @@ form {
   }
   
   input {
-    width: 100%;
+    width: 95%;
     padding: 8px 10px;
     border: 1px solid #bbb;
     border-radius: 8px;
